--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/check-hyperlane.js", "use": "@vercel/node" },
+    { "src": "api/check-hyperlane.ts", "use": "@vercel/edge" },
     { "src": "index.html", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/api/check-hyperlane", "dest": "api/check-hyperlane.js" },
+    { "src": "/api/check-hyperlane", "dest": "api/check-hyperlane.ts" },
     { "src": "/", "dest": "/index.html" }
   ]
 }
